--- a/src/App.css
+++ b/src/App.css
@@ -18,21 +18,6 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
@@ -44,4 +29,11 @@
 .ContenedorPrincipal{
   display:flex;
   justify-content: center;
+  flex-direction: column;
 }
+
+.list{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+};
